# tictactoe

./: .gitignore  README.md
api/: pyproject.toml  requirements.txt  setup.py
api/app/: app.py  extensions.py
api/resources/: __init__.py  controller.py  game.py
api/tests/: conftest.py  test_controller.py  test_resource.py
ui/: README.md  angular.json  package-lock.json  package.json
ui/src/: index.html
ui/src/app/: app.component.html  app.component.ts  app.module.ts  board.model.ts  cell.model.ts  cell.ts  deserializable.model.ts  play-api.service.ts  play.model.ts
ui/src/app/board/: board.component.css  board.component.html  board.component.ts
ui/src/app/cell/: cell.component.css  cell.component.html  cell.component.ts
ui/src/environments/: environment.ts
