[tool.poetry]
name = "tictactoe"
version = "0.1.0"
description = "TicTacToe SPA using Flask and Angular"
authors = ["Wilding, Marina"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.0"
Flask-RestPlus = "^0.12.1"
pytest-flask = "^0.15.0"
pytest-mock = "^1.10"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
